--- a/public/activity/index.html
+++ b/public/activity/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/activity.css">
 </head>
 <body>
-<header>
+<header style="display: none;">
    领红包
 </header>
     <nav id="navs">
@@ -25,10 +25,10 @@
             <img src="./img/hongbao.png" alt="淘宝红包"/>
             <p>领红包</p>
         </div>
-         <div class="footer_nav" id="new_pic">
-            <img src="./img/shengchenghaibao.png" alt="生成海报"/>
-            <p>生成海报</p>
-         </div>
+         <!--<div class="footer_nav" id="new_pic">-->
+            <!--<img src="./img/shengchenghaibao.png" alt="生成海报"/>-->
+            <!--<p>生成海报</p>-->
+         <!--</div>-->
     </nav>
     <div id="mengcheng">
         <div id="ball_boxs">
