--- a/public/activity/index.html
+++ b/public/activity/index.html
@@ -12,12 +12,12 @@
     <nav id="navs">
         <!--标语-->
         <img src="./img/biaoyu.png" alt="标语" id="biaoyu">
-        <div id="ball_box">
-            <p id="activity_data">有效日期:2018-02-01至2018-02-28</p>
-            <div id="activity_content">
-                <p>新年新气象，红包抽奖享不停！邀新人赚赏金188元大礼包，超值好货0元购！【活动链接】｛选择分享渠道后自动生成链接｝ ------------------------------ 复制本段文字， {￥选择分享渠道后自动生成淘口令｝,打开[手淘]领红包</p>
+        <div class="ball_box" id="share_btn">
+            <!--<p id="activity_data">有效日期: 2018-02-01至2018-02-28</p>-->
+            <div  class="activity_content ">
+                <p>新年新气象，红包抽奖享不停！邀新人赚赏金188元大礼包，超值好货0元购！【活动链接】｛选择分享渠道后自动生成链接｝ ---------------------------------- 复制本段文字， {￥选择分享渠道后自动生成淘口令｝,打开[手淘]领红包</p>
             </div>
-            <div class="share_btn"><img src="./img/fxzq.png" alt="" id="share_btn"></div>
+            <!--<div class="share_btn"><img src="./img/fxzq.png" alt="" id="share_btn"></div>-->
         </div>
         <p id="together">邀请好友 一起来抽奖</p>
         <div class="footer_nav" id="zfb">
@@ -30,12 +30,12 @@
          </div>
     </nav>
     <div id="mengcheng">
-        <div id="ball_boxs">
-            <p id="activity_datas">分享文案已复制</p>
-            <div id="activity_contents">
+        <div class="ball_boxs"  id="share_btns">
+            <!--<p id="activity_datas">分享文案已复制</p>-->
+            <div class="activity_contents">
                 <p id="copy_text">新年新气象，红包抽奖享不停！邀新人赚赏金188元大礼包，超值好货0元购！【活动链接】｛<sapn id="shorturl"></sapn>｝ ------------------------ 复制本段文字,{<sapn id="taocode"></sapn>｝,打开[手淘]领红包</p>
             </div>
-            <div class="share_btns"><img src="./img/wxzt.png" alt="" id="share_btns"></div>
+            <!--<div class="share_btns"><img src="./img/wxzt.png" alt="" </div>-->
         </div>
     </div>
 <!--生成图片-->
