解决二维码bug4

--- a/public/activity/index.html
+++ b/public/activity/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./plugins/layer/need/layer.css">
 </head>
 <body>
+<div id="aaa">
     <nav id="navs">
         <!--标语-->
         <img src="./img/biaoyu.png" alt="标语" id="biaoyu">
@@ -44,6 +45,7 @@
         <div id="code"></div>
     </div>
     <div id="save_pic">返回活动页</div>
+</div>
 </div>
 </body>
 <script src="js/jquery.min.js"></script>
