修改蒙层固定样式

--- a/public/activity/index.html
+++ b/public/activity/index.html
@@ -16,7 +16,7 @@
         <div class="ball_box" id="share_btn">
             <!--<p id="activity_data">有效日期: 2018-02-01至2018-02-28</p>-->
             <div  class="activity_content ">
-                <p>新年新气象，红包抽奖享不停！邀新人赚赏金188元大礼包，超值好货0元购！【活动链接】｛选择分享渠道后自动生成链接｝ ---------------------------------- 复制本段文字， {￥选择分享渠道后自动生成淘口令｝,打开[手淘]领红包</p>
+                <p>新年新气象,红包抽奖享不停!邀新人赚赏金188元大礼包,超值好货0元购!【活动链接】｛选择分享渠道后自动生成链接}---------------------------------- 复制本段文字,{￥选择分享渠道后自动生成淘口令｝,打开[手淘]领红包</p>
             </div>
             <!--<div class="share_btn"><img src="./img/fxzq.png" alt="" id="share_btn"></div>-->
         </div>
@@ -55,7 +55,6 @@
 <script src="https://cdn.bootcss.com/html2canvas/0.4.1/html2canvas.js"></script>
 <script src="js/jquery.qrcode.min.js"></script>
 <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-
 <script>
     // $("#code").qrcode({
     //     render:"table",
