--- a/public/activity/index.html
+++ b/public/activity/index.html
@@ -5,7 +5,8 @@
     <title>邀新人拿高佣</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="./css/activity.css?t=123_123">
+    <!--<link rel="stylesheet" href="./css/activit.css?t=123_123">-->
+    <link rel="stylesheet" href="./css/activit.css?t=123_123">
     <link rel="stylesheet" href="./plugins/layer/need/layer.css">
 </head>
 <body>
